--- a/count_repeated.html
+++ b/count_repeated.html
@@ -17,13 +17,15 @@
   <h1>count_repeated</h1>
   
   <h2>Description</h2>
-  <p>Given a sequence, count how many times the base is the as in the previous position.
+  <p>Given a sequence, count how many times the base is the same as in the previous position.
     Input is provided by the user.
 
 
 </p>
 
+<!--
 <h2>Hint</h2>
+-->
 <p> 
 </p>
 <pre><code> 
