--- a/dipeptides.html
+++ b/dipeptides.html
@@ -17,7 +17,7 @@
   <h1>dipeptides</h1>
   
   <h2>Description</h2>
-  <p>Write a code that, given a string with residues, generates a list (an prints it) with all possible dipeptides that can be constructed combining the residues in the string. Repetition is possible.
+  <p>Write a code that, given a string with residues, generates a list (and prints it) with all possible dipeptides that can be constructed combining the residues in the string. Repetition is possible.
 
 
 
