--- a/gc_content.html
+++ b/gc_content.html
@@ -17,7 +17,7 @@
   <h1>gc_content</h1>
   
   <h2>Description</h2>
-  <p></b> Compute the GC content of a DNA sequence deffined in a variable.</p>
+  <p></b> Compute the GC content of a DNA sequence defined in a variable.</p>
 
 <h2>Hint</h2>
 <p> Use the function round() to present only two decimals
