fix in score_seqs and overlaps

--- a/count_matches.html
+++ b/count_matches.html
@@ -61,5 +61,6 @@ found 0 matches as indicated by *
   <h3>Related exercises:</h3>
   <p><a href="count_repeated.html">count_repeated</a></p>
   <p><a href="count_matches_fasta.html">count_matches_fasta</a></p>
+  <p><a href="count_matches_stars.html">count_matches_stars</a></p>
 </body>
 </html>
