--- a/overlaps.html
+++ b/overlaps.html
@@ -17,25 +17,27 @@
   <h1>overlaps</h1>
   
   <h2>Description</h2>
-  <p>Write a fuction <b>count_ov(sequence, motif)</b> that works similar to str.count() method but is aware of overlaps between motifs (see Tests).</p>
+  <p>Write a fuction <b>count_ov(sequence, motif)</b> that works similar to str.count() method but is aware of overlaps between motifs (see Tests).
+    <b>count_ov</b> should return a tuple with both the counts and a list with the positions where motifs start.</p>
 
+<!--
 <h2>Hint</h2>
 <p>
 </p>
 <pre><code> 
 </code></pre>
-
+-->
   <h2>Tests</h2>
   <pre><code>    >>> 'GATATAT'.count('ATAT')
     1
     >>> count_ov('GATATAT', 'ATAT')
-    2
+    (2, [1, 3])
     >>> count_ov('GATATATATATGCATATATACTT', 'ATAT')
-    6
+    (6, [1, 3, 5, 7, 13, 15])
     >>> count_ov('GAT', 'ATAT')
-    0
+    (0, [])
     >>> count_ov('GAT', '')
-    0
+    (0, [])
 </code></pre >
 
   <hr>
