--- a/score_words_threshold.html
+++ b/score_words_threshold.html
@@ -21,6 +21,7 @@
   
   <h2>Description</h2>
   <p>Modify the function <b>score_words()</b> by adding a minimum threshold for the words to be returned in the output.
+    One test use <a href="kmers.html">kmers()</a> function
 </p>
 
 <h2>Hint</h2>
