--- a/naive_match.html
+++ b/naive_match.html
@@ -20,7 +20,7 @@
   <h1>naive_match</h1>
   
   <h2>Description</h2>
-  <p> Write a function <b>naive_match(p, t)</b> that returns a list with the offsets of all ocurrences of pattern <b>p</b> in the string <b>t</b>. Do not use .find(). Slide the pattern over text one by one and check for a match (this is called the Naive Match Algorithm). 
+  <p> Write a function <b>naive_match(p, t)</b> that returns a list with the offsets of all ocurrences of pattern <b>p</b> in the string <b>t</b>. Do not use .find() nor the membership operator "in". Slide the pattern over text and compare letters one by one searching for a match (this is called the Naive Match Algorithm).
 
     </p>
 
