second fic gc_content_funct

--- a/gc_content_funct.html
+++ b/gc_content_funct.html
@@ -26,9 +26,11 @@
 </p>
 
 <h2>Hint</h2>
-<p>The part of the code related to the <b>input()</b> call should be placesd outside gc_content().
+<p>The part of the code related to the <b>input()</b> call should be placed outside gc_content().
 Use: </p>
-<pre>if __name__ == "__name__":<code> 
+<pre><code>if __name__ == "__name__":
+    num_seq = int(input())
+    ...
 </code></pre>
 
   <h2>Tests</h2>
