--- a/exp_freq.html
+++ b/exp_freq.html
@@ -23,9 +23,12 @@
   <p> Write a function <b>exp_freq(biopython_gencode)</b> that computes the expected frequency for each amino acid
     considering all possible triplets in a speficic genetic code. Genetic codes are implemented in Biopython (Standard by default).
 </p>
+
+
+
 <h2>Hint</h2>
-<pre><code>import CodonTable from Bio.Data</code></pre>
-<p>The dictionary for the "Standard" genetic code is in CodonTable.unambiguous_dna_by_name['Standard'].back_table</p>
+<pre><code>from Bio.Data import CodonTable</code></pre>
+<p>The dictionary for the "Standard" genetic code is in CodonTable.unambiguous_dna_by_name['Standard'].forward_table</p>
 <p>The list of all the genetic codes implemented in Biopython can be seen in CodonTable.unambiguous_dna_by_name.keys()</p>
   <h2>Tests</h2>
   <pre>    >>> len(exp_freq("Standard"))
